  * Update path to docbook-xsl stylesheet in debian/rules to
    /usr/share/xml/docbook/stylesheet/docbook-xsl/. Add versioned build-depends
    to docbook-xsl (>= 1.74.3+dfsg) for that reason.
  * Fix bashisms in scripts/decrypt_opensc, thanks to Raphael Geissert.
    (closes: #530060)
  * Fix UUID and LABEL handling for cryptroot, thanks to Kees Cook and ubuntu.
    (closes: #522041)

 -- Jonas Meurer <mejo@debian.org>  Mon, 25 May 2009 16:38:25 +0200

cryptsetup (2:1.0.6+20090405.svn49-1) unstable; urgency=low

  * New upstream svn snapshot. Highlights include:
    - Uses remapping to error target instead of calling udevsettle for
      temporary crypt device. (closes: #514729, #498964, #521547)
    - Removes lots of autoconf stuff as it's generated by autogen.sh anyway.
    - Uses autopoint in build process, thus needs to Build-Depend on cvs.
    - Fixes signal handler to proper close device.
    - Wipes start of device before LUKS-formatting.
    - Allows deletion of key slot with it's own key. (closes: #513596)
    - Checks device mapper communication and gives proper error message in
      case the communication fails. (closes: #507727)
  * Update debian patches accordingly:
    - Remove obsolete patches 01_gettext_package and 03_check_for_root
    - Update patch 02_manpage
  * Add missing newlines to some error messages in passdev.c. Thanks to
    Christoph Anton Mitterer for bugreport and patch. (closes: #509067)
  * Move keyscripts in initramfs from /keyscripts to /lib/cryptsetup/scripts
    for the sake of consistency between initramfs and normal system. Document
    this change in NEWS.Debian. (closes: #509066)
  * Fix $LOUD in cryptdisks.init and cryptdisks.functions to take effect. Add
    LOUD="yes" to cryptdisks_start. (closes: #513149)
  * cryptdisks_{start,stop}: print error message if no entry is found in
    crypttab for the given name.
  * Actually fix watchfile to work with code.google.com.